--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.16.0",
+    "react-media-hook": "^0.5.1",
     "swiper": "^11.2.6",
     "tailwind-merge": "^3.2.0",
+    "yet-another-react-lightbox": "^3.23.1",
     "zod": "^3.24.4"
   },
   "devDependencies": {
